--- a/my-app/src/Contact.css
+++ b/my-app/src/Contact.css
@@ -26,3 +26,15 @@
   opacity: 0.8;
   color: beige;
 }
+
+@media only screen and (max-width: 390px) {
+  .icons {
+    margin-right: 0;
+    font-size: 1rem;
+  }
+  .contact-info h3 {
+    margin-left: 1.5rem;
+    font-size: 0.8rem;
+    overflow-x: hidden;
+  }
+}
