--- a/my-app/src/Languages.css
+++ b/my-app/src/Languages.css
@@ -97,7 +97,8 @@
   .FrontEnd {
     margin-top: 10%;
     margin-bottom: 50%;
-    text-align: center;
+    margin-left: 5%;
+    text-align: left;
     z-index: 10;
   }
   br {
@@ -142,7 +143,8 @@
   }
   .BackEnd {
     margin-top: 10%;
-    text-align: center;
+    text-align: LEFT;
+    margin-left: 5%;
     z-index: 10;
   }
   .BackEnd ul {
@@ -156,6 +158,8 @@
   }
 
   .database {
+    text-align: left;
+    margin-left: 5%;
     margin-top: 40% !important;
   }
   .database h3 {
